[package]
name = "ant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.hashbrown]
version = "0.13"
features = [
#    "nightly", 
#    "raw", 
    "inline-more", 
    "ahash", 
#    "bumpalo"
    ] 
